change theme color

--- a/dashboard/templates/v2/dash_aforecast.html
+++ b/dashboard/templates/v2/dash_aforecast.html
@@ -40,24 +40,24 @@
 		                        	    </select>
 
 		                        	    <label for="WMSLayer">WMS Layer :</label>
-		                        	    <div id="WMSLayer" class="checkbox checkbox-red wms_check">
+		                        	    <div id="WMSLayer" class="checkbox checkbox-indigo wms_check">
 		                        	        <label><input type="checkbox" data-type=wms data-layer=aforecast checked>Avalanche Forecast</label>
 		                        	    </div>
 
 		                        	    <label for="lvl">Choose Level :</label>
 		                        	    <div id="lvl" class="lvl_choice">
 			                        	    <div class="aforecast_checkbox_pop aforecast_opt">
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="aforecast_checkbox" value="ava_forecast_low_pop">Low
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="aforecast_checkbox" value="ava_forecast_med_pop">Moderate
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="aforecast_checkbox" value="ava_forecast_high_pop">High
 		    										</label>
@@ -68,10 +68,10 @@
 
 	                            		<label for="themes">Pick a theme :</label>
 	                            		<div id="themes">
-	                            		    <button class="theme active" data-btn="YlOrRd"></button>
+	                            		    <button class="theme" data-btn="YlOrRd"></button>
 	                            		    <button class="theme" data-btn="PuRd"></button>
 	                            		    <button class="theme" data-btn="GnBu"></button>
-	                            		    <button class="theme" data-btn="Blues"></button>
+	                            		    <button class="theme active" data-btn="Blues"></button>
 	                            		    <button class="theme" data-btn="BuGn"></button>
 	                            		    <button class="theme" data-btn="BuPu"></button>
 	                            		    <button class="theme" data-btn="Greens"></button>
