--- a/dashboard/templates/v2/dash_arisk.html
+++ b/dashboard/templates/v2/dash_arisk.html
@@ -41,43 +41,43 @@
 		                        	    </select>
 
 		                        	    <label for="WMSLayer">Choose Layer :</label>
-		                        	    <div id="WMSLayer" class="checkbox checkbox-red wms_check">
+		                        	    <div id="WMSLayer" class="checkbox checkbox-indigo wms_check">
 		                        	        <label><input type="checkbox" data-type=wms data-layer=arisk checked>Avalanche Risk</label>
 		                        	    </div>
 
 		                        	    <label for="lvl">Choose Level :</label>
 		                        	    <div id="lvl" class="lvl_choice">
 			                        	    <div class="arisk_checkbox_pop arisk_opt">
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="arisk_checkbox" value="med_ava_population">Moderate
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="arisk_checkbox" value="high_ava_population">High
 		    										</label>
 		    									</div>
 		                            		</div>
 		                            		<div style='display:none;' class="arisk_checkbox_build arisk_opt">
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="arisk_checkbox" value="med_ava_buildings">Moderate
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="arisk_checkbox" value="high_ava_buildings">High
 		    										</label>
 		    									</div>
 		                            		</div>
 		                            		<div style='display:none;' class="arisk_checkbox_area arisk_opt">
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="arisk_checkbox" value="med_ava_area">Moderate
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="arisk_checkbox" value="high_ava_area">High
 		    										</label>
@@ -87,10 +87,10 @@
 
 	                            		<label for="themes">Pick a theme :</label>
 	                            		<div id="themes">
-	                            		    <button class="theme active" data-btn="YlOrRd"></button>
+	                            		    <button class="theme" data-btn="YlOrRd"></button>
 	                            		    <button class="theme" data-btn="PuRd"></button>
 	                            		    <button class="theme" data-btn="GnBu"></button>
-	                            		    <button class="theme" data-btn="Blues"></button>
+	                            		    <button class="theme active" data-btn="Blues"></button>
 	                            		    <button class="theme" data-btn="BuGn"></button>
 	                            		    <button class="theme" data-btn="BuPu"></button>
 	                            		    <button class="theme" data-btn="Greens"></button>
