--- a/dashboard/templates/v2/dash_baseline.html
+++ b/dashboard/templates/v2/dash_baseline.html
@@ -93,10 +93,10 @@
 
                                         <label for="themes">Pick a theme :</label>
                                         <div id="themes">
-                                            <button class="theme active" data-btn="YlOrRd"></button>
+                                            <button class="theme" data-btn="YlOrRd"></button>
                                             <button class="theme" data-btn="PuRd"></button>
                                             <button class="theme" data-btn="GnBu"></button>
-                                            <button class="theme" data-btn="Blues"></button>
+                                            <button class="theme active" data-btn="Blues"></button>
                                             <button class="theme" data-btn="BuGn"></button>
                                             <button class="theme" data-btn="BuPu"></button>
                                             <button class="theme" data-btn="Greens"></button>
