--- a/dashboard/templates/v2/dash_drought.html
+++ b/dashboard/templates/v2/dash_drought.html
@@ -59,10 +59,10 @@
 
 		                        	    <label for="WMSLayer">WMS Layer :</label>
 		                        	    <div id="WMSLayer" class="wms_check">
-		                        	    	<div class="checkbox checkbox-red">
+		                        	    	<div class="checkbox checkbox-indigo">
 		                        	    	    <label><input type="checkbox" data-type=wms data-layer=landcover>Landcover Area</label>
 		                        	    	</div>
-		                        	    	<div class="checkbox checkbox-red">
+		                        	    	<div class="checkbox checkbox-indigo">
 		                        	    	    <label><input type="checkbox" data-type=wms data-layer=drought>Drought Area</label>
 		                        	    	</div>
 		                        	    </div>
@@ -70,37 +70,37 @@
 		                        	    <label for="landcov_cat" class="hidden">Landcover Type :</label>
 		                        	    <div id="landcov_cat" class="landcov_choice hidden">
 			                        	    <div class="">
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landcov_checkbox" value="fruit_tree">Fruit Trees
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landcov_checkbox" value="rainfed">Rainfed
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landcov_checkbox" value="rangeland">Rangeland
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landcov_checkbox" value="forest">Forest &amp; Shrub
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landcov_checkbox" value="vineyard">Vineyards
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landcov_checkbox" value="build_up">Build Up
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landcov_checkbox" value="irra_land">Irrigated Agricultural Land
 		    										</label>
@@ -111,81 +111,81 @@
 		                        	    <label for="lvl">Choose Level :</label>
 		                        	    <div id="lvl" class="lvl_choice">
 			                        	    <div class="drought_checkbox_pop drought_opt">
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="drought_checkbox" value="drought_pop_ab_dry">Abnormally Dry
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="drought_checkbox" value="drought_pop_moderate">Moderate
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="drought_checkbox" value="drought_pop_severe">Severe
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="drought_checkbox" value="drought_pop_extreme">Extreme
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="drought_checkbox" value="drought_pop_exceptional">Exceptional
 		    										</label>
 		    									</div>
 		                            		</div>
 		                            		<div style='display:none;' class="drought_checkbox_build drought_opt">
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="drought_checkbox" value="drought_build_ab_dry">Abnormally Dry
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="drought_checkbox" value="drought_build_moderate">Moderate
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="drought_checkbox" value="drought_build_severe">Severe
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="drought_checkbox" value="drought_build_extreme">Extreme
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="drought_checkbox" value="drought_build_exceptional">Exceptional
 		    										</label>
 		    									</div>
 		                            		</div>
 		                            		<div style='display:none;' class="drought_checkbox_area drought_opt">
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="drought_checkbox" value="drought_area_ab_dry">Abnormally Dry
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="drought_checkbox" value="drought_area_moderate">Moderate
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="drought_checkbox" value="drought_area_severe">Severe
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="drought_checkbox" value="drought_area_extreme">Extreme
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="drought_checkbox" value="drought_area_exceptional">Exceptional
 		    										</label>
@@ -196,10 +196,10 @@
 
 	                            		<label for="themes">Pick a theme :</label>
 	                            		<div id="themes">
-	                            		    <button class="theme active" data-btn="YlOrRd"></button>
+	                            		    <button class="theme" data-btn="YlOrRd"></button>
 	                            		    <button class="theme" data-btn="PuRd"></button>
 	                            		    <button class="theme" data-btn="GnBu"></button>
-	                            		    <button class="theme" data-btn="Blues"></button>
+	                            		    <button class="theme active" data-btn="Blues"></button>
 	                            		    <button class="theme" data-btn="BuGn"></button>
 	                            		    <button class="theme" data-btn="BuPu"></button>
 	                            		    <button class="theme" data-btn="Greens"></button>
