--- a/dashboard/templates/v2/dash_earthquake.html
+++ b/dashboard/templates/v2/dash_earthquake.html
@@ -49,133 +49,133 @@
 
                                         <!-- data attribute will be used in javascript to know which layer to add or remove from the map -->
                                         <label for="WMSLayer">WMS Layer :</label>
-                                        <div id="WMSLayer" class="checkbox checkbox-red wms_check">
+                                        <div id="WMSLayer" class="checkbox checkbox-indigo wms_check">
                                             <label><input type="checkbox" data-type=wms data-layer=erthqk checked>Earthquake Shakemap</label>
                                         </div>
 
                                         <label for="lvl">Choose Level :</label>
                                         <div id="lvl" class="lvl_choice erthqk_checkbox">
                                             <div class="erthqk_checkbox_pop erthqk_opt">
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="pop_shake_weak">Weak
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="pop_shake_light">Light
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="pop_shake_moderate">Moderate
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="pop_shake_strong">Strong
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="pop_shake_verystrong">Very-strong
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="pop_shake_severe">Severe
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="pop_shake_violent">Violent
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="pop_shake_extreme">Extreme
                                                     </label>
                                                 </div>
                                             </div>
                                             <div style='display:none;' class="erthqk_checkbox_settl erthqk_opt">
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="settlement_shake_weak">Weak
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="settlement_shake_light">Light
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="settlement_shake_moderate">Moderate
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="settlement_shake_strong">Strong
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="settlement_shake_verystrong">Very-strong
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="settlement_shake_severe">Severe
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="settlement_shake_violent">Violent
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="settlement_shake_extreme">Extreme
                                                     </label>
                                                 </div>
                                             </div>
                                             <div style='display:none;' class="erthqk_checkbox_build erthqk_opt">
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="buildings_shake_weak">Weak
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="buildings_shake_light">Light
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="buildings_shake_moderate">Moderate
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="buildings_shake_strong">Strong
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="buildings_shake_verystrong">Very-strong
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="buildings_shake_severe">Severe
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="buildings_shake_violent">Violent
                                                     </label>
                                                 </div>
-                                                <div class="checkbox checkbox-red">
+                                                <div class="checkbox checkbox-indigo">
                                                     <label>
                                                       <input type="checkbox" name="erthqk_checkbox" value="buildings_shake_extreme">Extreme
                                                     </label>
@@ -270,10 +270,10 @@
                                         
                                         <label for="themes">Pick a theme :</label>
                                         <div id="themes">
-                                            <button class="theme active" data-btn="YlOrRd"></button>
+                                            <button class="theme" data-btn="YlOrRd"></button>
                                             <button class="theme" data-btn="PuRd"></button>
                                             <button class="theme" data-btn="GnBu"></button>
-                                            <button class="theme" data-btn="Blues"></button>
+                                            <button class="theme active" data-btn="Blues"></button>
                                             <button class="theme" data-btn="BuGn"></button>
                                             <button class="theme" data-btn="BuPu"></button>
                                             <button class="theme" data-btn="Greens"></button>
