--- a/dashboard/templates/v2/dash_frisk.html
+++ b/dashboard/templates/v2/dash_frisk.html
@@ -42,7 +42,7 @@
                     				    </select>
 
                     				    <label for="WMSLayer">WMS Layer :</label>
-                    				    <div id="WMSLayer" class="checkbox checkbox-red">
+                    				    <div id="WMSLayer" class="checkbox checkbox-indigo">
                     				        <label><input type="checkbox" data-type=wms data-layer=frisk checked>Flood Risk</label>
                     				    </div>
 
@@ -62,10 +62,10 @@
 
                     				    <label for="themes">Pick a theme :</label>
                     				    <div id="themes">
-                    				        <button class="theme active" data-btn="YlOrRd"></button>
+                    				        <button class="theme" data-btn="YlOrRd"></button>
                     				        <button class="theme" data-btn="PuRd"></button>
                     				        <button class="theme" data-btn="GnBu"></button>
-                    				        <button class="theme" data-btn="Blues"></button>
+                    				        <button class="theme active" data-btn="Blues"></button>
                     				        <button class="theme" data-btn="BuGn"></button>
                     				        <button class="theme" data-btn="BuPu"></button>
                     				        <button class="theme" data-btn="Greens"></button>
