--- a/dashboard/templates/v2/dash_landslide.html
+++ b/dashboard/templates/v2/dash_landslide.html
@@ -43,16 +43,16 @@
 
 		                        	    <label for="WMSLayer">WMS Layer :</label>
 		                        	    <div id="WMSLayer" class="wms_check">
-		                        	    	<div class="checkbox checkbox-red landslide_checkbox_ku landslide_opt">
+		                        	    	<div class="checkbox checkbox-indigo landslide_checkbox_ku landslide_opt">
 		                        	    	    <label><input type="checkbox" data-type=wms data-layer=ku>Multi-criteria Susceptibility Index</label>
 		                        	    	</div>
-		                        	    	<div style='display:none;' class="checkbox checkbox-red landslide_checkbox_s1 landslide_opt">
+		                        	    	<div style='display:none;' class="checkbox checkbox-indigo landslide_checkbox_s1 landslide_opt">
 		                        	    	    <label><input type="checkbox" data-type=wms data-layer=s1>Landslide Susceptibility (S1)</label>
 		                        	    	</div>
-		                        	    	<div style='display:none;' class="checkbox checkbox-red landslide_checkbox_s2 landslide_opt">
+		                        	    	<div style='display:none;' class="checkbox checkbox-indigo landslide_checkbox_s2 landslide_opt">
 		                        	    	    <label><input type="checkbox" data-type=wms data-layer=s2>Landslide Susceptibility (S2)</label>
 		                        	    	</div>
-		                        	    	<div style='display:none;' class="checkbox checkbox-red landslide_checkbox_s3 landslide_opt">
+		                        	    	<div style='display:none;' class="checkbox checkbox-indigo landslide_checkbox_s3 landslide_opt">
 		                        	    	    <label><input type="checkbox" data-type=wms data-layer=s3>Landslide Susceptibility (S3)</label>
 		                        	    	</div>
 		                        	    </div>
@@ -60,110 +60,110 @@
 		                        	    <label for="lvl">Choose Level :</label>
 		                        	    <div id="lvl" class="lvl_choice">
 			                        	    <div class="landslide_checkbox_ku landslide_opt">
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="lsi_ku_low">Low
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="lsi_ku_moderate">Moderate
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="lsi_ku_high">High
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="lsi_ku_very_high">Very High
 		    										</label>
 		    									</div>
 		                            		</div>
 		                            		<div style='display:none;' class="landslide_checkbox_s1 landslide_opt">
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="ls_s1_wb_low">Low
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="ls_s1_wb_moderate">Moderate
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="ls_s1_wb_high">High
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="ls_s1_wb_very_high">Very High
 		    										</label>
 		    									</div>
 		                            		</div>
 		                            		<div style='display:none;' class="landslide_checkbox_s2 landslide_opt">
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="ls_s2_wb_low">Low
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="ls_s2_wb_moderate">Moderate
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="ls_s2_wb_high">High
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="ls_s2_wb_very_high">Very High
 		    										</label>
 		    									</div>
 		                            		</div>
 		                            		<div style='display:none;' class="landslide_checkbox_s3 landslide_opt">
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="ls_s3_wb_low">Low
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="ls_s3_wb_moderate">Moderate
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="ls_s3_wb_high">High
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="ls_s3_wb_very_high">Very High
 		    										</label>
 		    									</div>
 		                            		</div>
 		                            		<div style='display:none;' class="landslide_checkbox_immap landslide_opt">
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="lsi_immap_low">Low
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="lsi_immap_moderate">Moderate
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="lsi_immap_high">High
 		    										</label>
 		    									</div>
-		    									<div class="checkbox checkbox-red">
+		    									<div class="checkbox checkbox-indigo">
 		    										<label>
 		    										  <input type="checkbox" name="landslide_checkbox" value="lsi_immap_very_high">Very High
 		    										</label>
@@ -174,10 +174,10 @@
 
 	                            		<label for="themes">Pick a theme :</label>
 	                            		<div id="themes">
-	                            		    <button class="theme active" data-btn="YlOrRd"></button>
+	                            		    <button class="theme" data-btn="YlOrRd"></button>
 	                            		    <button class="theme" data-btn="PuRd"></button>
 	                            		    <button class="theme" data-btn="GnBu"></button>
-	                            		    <button class="theme" data-btn="Blues"></button>
+	                            		    <button class="theme active" data-btn="Blues"></button>
 	                            		    <button class="theme" data-btn="BuGn"></button>
 	                            		    <button class="theme" data-btn="BuPu"></button>
 	                            		    <button class="theme" data-btn="Greens"></button>
