--- a/geonode/templates/v2/_permissions.html
+++ b/geonode/templates/v2/_permissions.html
@@ -23,7 +23,7 @@
             {% trans "Who can view it?" %}
           </div>
           <div class="col-md-9">
-            <div class="checkbox checkbox-red">
+            <div class="checkbox checkbox-indigo">
               <label>
                 <input type="checkbox" name="view_anonymous" id="perms_view_anyone" value="AnonymousUser" {% if DEFAULT_ANONYMOUS_VIEW_PERMISSION %}checked{% endif %}>{% trans "Anyone" %}
               </label>
@@ -48,7 +48,7 @@
             {% trans "Who can download it?" %}
           </div>
           <div class="col-md-9">
-            <div class="checkbox checkbox-red">
+            <div class="checkbox checkbox-indigo">
               <label>
                 <input type="checkbox" name="download_anonymous" id="perms_download_resourcebase_anyone" value="AnonymousUser" {% if DEFAULT_ANONYMOUS_DOWNLOAD_PERMISSION %}checked{% endif %}>{% trans "Anyone" %}
               </label>
