--- a/geonode/templates/v2/_permissions_simple.html
+++ b/geonode/templates/v2/_permissions_simple.html
@@ -10,7 +10,7 @@
     </div>
     <div id="perm_view" class="panel-collapse collapse in">
       <div class="panel-body">
-        <div class="checkbox checkbox-red">
+        <div class="checkbox checkbox-indigo">
           <label>
             <input type="checkbox" name="view_anonymous" id="perms_view_anyone" value="AnonymousUser" {% if DEFAULT_ANONYMOUS_VIEW_PERMISSION %}checked{% endif %}>{% trans "Anyone" %}
           </label>
@@ -39,7 +39,7 @@
     </div>
     <div id="perm_download" class="panel-collapse collapse">
       <div class="panel-body">
-        <div class="checkbox checkbox-red">
+        <div class="checkbox checkbox-indigo">
           <label>
             <input type="checkbox" name="download_anonymous" id="perms_download_resourcebase_anyone" value="AnonymousUser" {% if DEFAULT_ANONYMOUS_DOWNLOAD_PERMISSION %}checked{% endif %}>{% trans "Anyone" %}
           </label>
