--- a/geonode/documents/templates/v2/document_detail.html
+++ b/geonode/documents/templates/v2/document_detail.html
@@ -86,7 +86,7 @@
                 <li><a data-toggle="tab" href="#rate">Rate</a></li>
                 <li><a data-toggle="tab" href="#comment">Comment</a></li>
             </ul> -->
-            <div class="tab-content" style="background-color: #fff; border-top: 4px solid #a72b1f;">
+            <div class="tab-content" style="">
               {% include "v2/resourcebase_info_panel.html" %}
               <div id="rate" class="tab-pane fade">
                   <table class="table">
@@ -116,10 +116,10 @@
           <div class="product-details-side">
             <div class="product-info" style="padding: 0;">
               <div class="product-map-editor">
-                <ul class="nav nav-tabs" style="text-align: center; background-color: #f5f5f5;">
+                <ul class="nav nav-tabs" style="">
                     <li class="active"><a data-toggle="tab" href="#legend">{% trans "Related Resource" %}</a></li>
                 </ul>
-                <div class="tab-content" style="height: 250px; padding: 10px 15px; background-color: #fff; overflow-y: auto; border-top: 4px solid #a72b1f;">
+                <div class="tab-content">
                     <div id="legend" class="tab-pane fade in active" style="margin-top: 15px;">
                       {% if layer.maps %}
                       <p>{% trans "List of resources using this document:" %}</p>
