--- a/geonode/layers/templates/v2/layer_detail.html
+++ b/geonode/layers/templates/v2/layer_detail.html
@@ -63,7 +63,7 @@
           </div>
           <div class="product-info-panel" style="margin: 0 -15px;">
             {% include "v2/_actions.html" %}
-            <div class="tab-content" style="background-color: #fff; border-top: 4px solid #a72b1f;">
+            <div class="tab-content">
               {% include "v2/resourcebase_info_panel.html" %}
               <div id="attribute" class="tab-pane fade">
                   {% if resource.attribute_set.all %}
@@ -136,7 +136,7 @@
             <div class="product-details-side">
               <div class="product-info" style="padding: 0;">
                 <div class="product-map-editor">
-                  <ul class="nav nav-tabs" style="text-align: center; background-color: #f5f5f5;">
+                  <ul class="nav nav-tabs">
                       {% if resource.get_legend %}
                       <li class="active"><a data-toggle="tab" href="#legend">{% trans "Legend" %}</a></li>
                       {% endif %}
@@ -148,7 +148,7 @@
                       <li><a data-toggle="tab" href="#rel_docs">{% trans "Related Documents" %}</a></li>
                       {% endif %}
                   </ul>
-                  <div class="tab-content" style="height: 250px; padding: 10px 15px; background-color: #fff; overflow-y: auto; border-top: 4px solid #a72b1f;">
+                  <div class="tab-content">
                     <div id="legend" class="tab-pane fade in active" style="margin-top: 15px;">
                       <p>{{ style.sld_title }}</p>
                       {% if resource.get_legend.link_type == 'image' %}
