--- a/geonode/templates/search/v2/_type_filters.html
+++ b/geonode/templates/search/v2/_type_filters.html
@@ -16,7 +16,7 @@
           {% for facet, count in facets.items %}
             {% if count > 0 %}
           <li> 
-            <div class="checkbox checkbox-red"> 
+            <div class="checkbox checkbox-indigo"> 
               <label><input type="checkbox" id="{{ facet }}" data-value="{{ facet }}" data-filter="{{ filter }}" ng-click="multiple_choice_listener($event)">
                 {% if facet == "presentation" %} 
                   {{ "Maps & Infographics" }}
